--- a/src/AnalyticsManager/configuration.ini
+++ b/src/AnalyticsManager/configuration.ini
@@ -1,5 +1,5 @@
 [DatabaseConfiguration]
-DatabaseHost = "127.0.0.1"
-DatabasePort = "3306"
-DatabaseUsername = "root"
-DatabasePassword = ""
+Host = "127.0.0.1"
+Port = "3306"
+Username = "root"
+Password = ""
